--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node": ">=12.16.3"
+    "node": "14.17"
   },
   "name": "big-poppa-code-react-starter-kit",
   "version": "0.1.0",
@@ -13,45 +13,42 @@
     "build:webpack": "webpack --mode production --env.NODE_ENV=production",
     "dev": "gulp",
     "styles": "gulp styles",
-    "start": "node server.js"
+    "start": "mamba server.mamba"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
     "autoprefixer": "^9.3.1",
     "axios": "^0.21.1",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.3",
     "clean-webpack-plugin": "^0.1.19",
-    "cors": "^2.8.5",
-    "css-loader": "^1.0.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-nodemon": "^2.5.0",
     "gulp-sass": "^3.0.0",
-    "har-validator": "^5.1.3",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "mambascript-loader": "^1.0.0",
-    "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.10.0",
+    "node-sass": "^5.0.0",
     "prettier": "^1.15.1",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
-    "react-redux": "^5.1.0",
-    "redux": "^4.0.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-router-mambascript": "^5.3.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gray-matter": "^4.0.3",
-    "mambascript": "^0.2.2",
-    "mongoose": "^5.10.2",
-    "showdown": "^1.9.1",
-    "teact": "^1.3.0"
+    "mambascript": "^0.3.7",
+    "mongoose": "^6.0.4",
+    "showdown": "^1.9.1"
   }
 }
