--- a/package.json
+++ b/package.json
@@ -19,12 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.4",
     "autoprefixer": "^9.3.1",
-    "axios": "^0.21.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.3",
     "clean-webpack-plugin": "^0.1.19",
     "gulp": "^4.0.0",
@@ -33,8 +28,8 @@
     "gulp-sass": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
+    "mambascript-loader": "^1.0.0",
     "node-sass": "^5.0.0",
-    "prettier": "^1.15.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-mambascript": "^5.3.2",
@@ -47,8 +42,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gray-matter": "^4.0.3",
+    "js-beautify": "^1.14.0",
+    "lodash.escaperegexp": "^4.1.2",
     "mambascript": "0.5.1",
     "mongoose": "^6.0.4",
+    "object-assign": "^4.1.1",
     "showdown": "^1.9.1"
   }
 }
