--- a/package.json
+++ b/package.json
@@ -21,21 +21,13 @@
   "devDependencies": {
     "autoprefixer": "^9.3.1",
     "browser-sync": "^2.26.3",
-    "clean-webpack-plugin": "^0.1.19",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-nodemon": "^2.5.0",
     "gulp-sass": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "json-loader": "^0.5.7",
-    "mambascript-loader": "^1.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-router-mambascript": "^5.3.2",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-md5-hash": "0.0.6"
+    "react-dom": "^17.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
