--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-nodemon": "^2.5.0",
     "gulp-sass": "^3.0.0",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "node-sass": "^5.0.0"
   },
   "dependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
