--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "object-assign": "^4.1.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "sass": "^1.58.0",
     "showdown": "^1.9.1"
   }
 }
